<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2009 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <!-- <skip /> -->
    <!-- Application name -->
    <string name="blueball">BlueBall Wallpaper</string>

    <!-- Wallpaper showing a cube -->

    <!-- Wallpaper showing a cube or dodecahedron, data read from resource -->
    <string name="wallpaper_blueball">Blueball Manipulator</string>

    <!-- Wallpaper showing a cube, renderscript version -->

    <string name="blueball_settings">Settings</string>
    <string name="blueball_settings_title">Set Overlay Darkness</string>
    <string name="blueball_settings_summary">Overlays a shadow on the screen for readability. (Max: 255)</string>
    
    <string name="blueball_settings_max">Max Number of Animations</string>
    <string name="blueball_settings_max_summary">Set to a specific amount to save memory. (0 = As many as screen can hold.)</string>
    
    <string name="about">About...</string>
    <string name="about_summary">Contributors</string>
    <string name="about_message">"All images created by SA Forum members. http://forums.somethingawful.com/showthread.php?threadid=3436777 http://forums.somethingawful.com/showthread.php?threadid=1695484 http://forums.somethingawful.com/showthread.php?threadid=1289159 GifDecoder ported to Android from Kevin Weiner's Java port of John Cristy's ImageMagick."</string>
    
    <string name="randomize">Randomize</string>
    <string name="randomize_summary">Load a different set of contraptions each startup.</string>
    
    <string name="reset">Reset</string>
    <string name="reset_summary">Reset tile selection and order based on settings above.</string>
    
</resources>
